Fixed a small bug in subregion dropdown in which selected value was not showing as the selected value

--- a/src/components/countrycard.css
+++ b/src/components/countrycard.css
@@ -1,6 +1,6 @@
 .country {
   flex-basis: 21%;
-  height: 46%;
+  height: 50%;
   /* border: 1px solid black; */
   display: flex;
   flex-wrap: wrap;
